<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="link.epoczta.carbscalc.ui.calculations.CalculationsViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.calculations.portioncarbs.PortionCarbsFragment">

            <TextView
                android:id="@+id/carbs_in_meal_label"
                style="@style/text_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/carbs_in_meal_label"
                android:textColor="@color/material_on_background_emphasis_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/meal_icon"
                app:layout_constraintTop_toBottomOf="@+id/add_to_meal_button" />

            <TextView
                android:id="@+id/carbs_in_meal_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="16dp"
                android:text="@{viewModel.carbsInMealString}"
                android:textColor="@color/material_on_background_emphasis_medium"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/unit_label_meal"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/carbs_in_meal_label"
                tools:text="45.73" />

            <TextView
                android:id="@+id/unit_label_meal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/g"
                android:textColor="@color/material_on_background_emphasis_medium"
                android:textSize="20sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/carbs_in_meal_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/carbs_in_meal_text" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/portion_weight_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/portion_weight"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/portion_weight_description_text"
                app:suffixText="@string/g">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/portion_weight_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:nextFocusDown="@id/carbs_in_100g_edit"
                    android:singleLine="true"
                    android:text="@={viewModel.portionWeightString}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/carbs_in_100g_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/carbs_in_100_g"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/carbs_in_100g_description_text"
                app:suffixText="@string/g">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/carbs_in_100g_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789.,"
                    android:inputType="numberDecimal"
                    android:nextFocusDown="@id/portion_weight_edit"
                    android:singleLine="true"
                    android:text="@={viewModel.carbsIn100gString}" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/carbs_in_portion_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="4dp"
                android:text="@{viewModel.carbsInPortionString}"
                android:textColor="?attr/colorPrimary"
                android:textSize="30sp"
                app:layout_constraintEnd_toStartOf="@+id/unit_label_portion"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/carbs_in_portion_label"
                tools:text="15.58" />

            <TextView
                android:id="@+id/unit_label_portion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/g"
                android:textColor="?attr/colorPrimary"
                android:textSize="24sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/carbs_in_portion_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/carbs_in_portion_text" />

            <TextView
                android:id="@+id/carbs_in_portion_label"
                style="@style/text_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/carbs_in_portion_label"
                android:textColor="?attr/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/bread_icon"
                app:layout_constraintTop_toBottomOf="@+id/carbs_in_100g_text_field" />

            <Button
                android:id="@+id/add_to_meal_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:onClick="@{() -> viewModel.calculateMealCarbs()}"
                android:text="@string/add_to_meal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/reset_meal_button"
                app:layout_constraintTop_toBottomOf="@+id/carbs_in_portion_text" />

            <Button
                android:id="@+id/reset_meal_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:onClick="@{() -> viewModel.resetMealCarbs()}"
                android:text="@string/reset_meal"
                app:layout_constraintBaseline_toBaselineOf="@+id/add_to_meal_button"
                app:layout_constraintEnd_toStartOf="@+id/add_to_meal_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/portion_weight_description_text"
                style="@style/text_normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/portion_weight_description"
                android:textColor="@color/material_on_background_emphasis_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/carbs_in_100g_description_text"
                style="@style/text_normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/carbs_in_100g_description"
                android:textColor="@color/material_on_background_emphasis_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/portion_weight_text_field" />

            <ImageView
                android:id="@+id/bread_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/slice_of_bread_icon"
                app:layout_constraintBottom_toBottomOf="@+id/carbs_in_portion_label"
                app:layout_constraintEnd_toStartOf="@+id/carbs_in_portion_label"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/ic_bread"
                app:tint="?attr/colorPrimary" />

            <ImageView
                android:id="@+id/meal_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/fork_and_knife_icon"
                app:layout_constraintBottom_toBottomOf="@+id/carbs_in_meal_label"
                app:layout_constraintEnd_toStartOf="@+id/carbs_in_meal_label"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/ic_restaurant"
                app:tint="@color/material_on_background_emphasis_medium" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>