<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="link.epoczta.carbscalc.ui.calculations.CalculationsViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.calculations.portionweight.PortionWeightFragment">

            <TextView
                android:id="@+id/carbs_in_100g_description_text"
                style="@style/text_normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/carbs_in_100g_description"
                android:textColor="@color/material_on_background_emphasis_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/carbs_in_portion_text_field" />

            <TextView
                android:id="@+id/carbs_in_portion_description_text"
                style="@style/text_normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/portion_carbs_description"
                android:textColor="@color/material_on_background_emphasis_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/carbs_in_portion_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/carbs_in_portion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/carbs_in_portion_description_text"
                app:suffixText="@string/g">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/carbs_in_portion_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789.,"
                    android:inputType="numberDecimal"
                    android:nextFocusDown="@id/carbs_in_100g_edit"
                    android:singleLine="true"
                    android:text="@={viewModel.carbsInPortionString}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/carbs_in_100g_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/carbs_in_100_g"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/carbs_in_100g_description_text"
                app:suffixText="@string/g">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/carbs_in_100g_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789.,"
                    android:inputType="numberDecimal"
                    android:nextFocusDown="@id/carbs_in_portion_edit"
                    android:singleLine="true"
                    android:text="@={viewModel.carbsIn100gString}" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/portion_weight_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="4dp"
                android:text="@{viewModel.portionWeightString}"
                android:textColor="?attr/colorPrimary"
                android:textSize="30sp"
                app:layout_constraintEnd_toStartOf="@+id/unit_label_portion"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/portion_weight_label"
                tools:text="157" />

            <TextView
                android:id="@+id/unit_label_portion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/g"
                android:textColor="?attr/colorPrimary"
                android:textSize="24sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/portion_weight_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/portion_weight_text" />

            <TextView
                android:id="@+id/portion_weight_label"
                style="@style/text_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/portion_weight_label"
                android:textColor="?attr/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/scale_icon"
                app:layout_constraintTop_toBottomOf="@+id/carbs_in_100g_text_field" />

            <ImageView
                android:id="@+id/scale_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/kitchen_scale_icon"
                app:layout_constraintBottom_toBottomOf="@+id/portion_weight_label"
                app:layout_constraintEnd_toStartOf="@+id/portion_weight_label"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/ic_scale"
                app:tint="?attr/colorPrimary" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>